# radiator_testing

./: .gitignore  README.md
coupon_thermal_test/documentation/: Coupon_Thermal_Test_Procedure.tex
radiator_deploy_sim/: CMakeLists.txt  state_sol.csv
radiator_deploy_sim/data/: data_visualization.py
radiator_deploy_sim/data/latex_equations/: hard_stops.tex  latex_equations.tex  state_system_matrix.tex
radiator_deploy_sim/data/rig_data_processing/video_processing/: CMakeLists.txt
radiator_deploy_sim/data/rig_data_processing/video_processing/include/: gen.h
radiator_deploy_sim/data/rig_data_processing/video_processing/src/: main.cpp
radiator_deploy_sim/data/visualization_env/: pyvenv.cfg
radiator_deploy_sim/data/visualizations/: data_visualization.py
radiator_deploy_sim/documentation/: Uncertainties.txt
radiator_deploy_sim/include/: gen.h  hinges.h  panels.h
radiator_deploy_sim/src/: gen.cpp  main.cpp  panels.cpp
v1_v2_models/: deployment_animation.py  deployment_animation_tracking.py  deployment_simulation_v2.py
